--- a/src/View/MainStyle.css
+++ b/src/View/MainStyle.css
@@ -4,7 +4,7 @@
 
 Button {
     -fx-text-fill: white;
-    -fx-font-family: "Arial Narrow";
+    -fx-font-family: 'Helvetica', Arial, sans-serif;
     -fx-font-weight: bold;
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
