--- a/src/View/Properties.fxml
+++ b/src/View/Properties.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.BoxBlur?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane  prefHeight="305.0" prefWidth="578.0" style="/*-fx-background-image: url;*/ -fx-background-size: 100% 100%;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.PropertiesController">
+<Pane prefHeight="305.0" prefWidth="578.0" style="/*-fx-background-image: url;*/ -fx-background-size: 100% 100%;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.PropertiesController">
     <children>
         <ImageView fitHeight="336.0" fitWidth="578.0" layoutY="1.0" opacity="0.4">
             <effect>
@@ -32,8 +31,8 @@
             <font>
                 <Font size="17.0" />
             </font></Button>
-        <Slider fx:id="musicSlider" layoutX="424.0" layoutY="178.0" />
-        <Slider fx:id="soundSlider" layoutX="424.0" layoutY="139.0" />
+        <Slider fx:id="musicSlider" layoutX="406.0" layoutY="195.0" />
+        <Slider fx:id="soundSlider" layoutX="406.0" layoutY="146.0" />
         <RadioButton fx:id="EmptyButton" layoutX="35.0" layoutY="88.0" mnemonicParsing="false" text="Empty Maze">
             <font>
                 <Font name="Yu Gothic Medium" size="14.0" />
@@ -59,7 +58,17 @@
                 <Font name="Yu Gothic Medium" size="16.0" />
             </font>
         </Label>
-        <TextField layoutX="418.0" layoutY="94.0" prefHeight="25.0" prefWidth="94.0" fx:id="threadPoolSize" />
+        <TextField fx:id="threadPoolSize" layoutX="421.0" layoutY="76.0" prefHeight="25.0" prefWidth="94.0" />
+      <Label layoutX="444.0" layoutY="111.0" prefHeight="33.0" prefWidth="48.0" text="Sounds" underline="true">
+         <font>
+            <Font name="Yu Gothic Medium" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="444.0" layoutY="164.0" prefHeight="33.0" prefWidth="48.0" text="Music" underline="true">
+         <font>
+            <Font name="Yu Gothic Medium" size="12.0" />
+         </font>
+      </Label>
 
 
     </children>
