--- a/src/main/resources/About.fxml
+++ b/src/main/resources/About.fxml
@@ -6,23 +6,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@windowsStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@MainStyle.css" xmlns="http://javafx.com/javafx/16" >
    <children>
       <Text layoutX="264.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="About" underline="true">
          <font>
             <Font name="Yu Gothic Medium" size="34.0" />
          </font>
       </Text>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="37.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../resources/images/gretel_front.png" />
-         </image>
-      </ImageView>
       <Text layoutX="212.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="welcome!" wrappingWidth="175.78253173828125" />
       <ImageView fitHeight="130.0" fitWidth="136.0" layoutX="433.0" layoutY="91.0">
-         <image>
-            <Image url="@../../../../Downloads/הורדה.jpg" />
-         </image>
       </ImageView>
    </children>
 </AnchorPane>
